--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -5,29 +5,31 @@
     <title th:text="${titulo}"></title>
 </head>
 <body>
-<form th:action="@{/form}" method="post">
+<form th:action="@{/form}" th:object="${usuario}" method="post">
 
     <h3 th:text="${titulo}"></h3>
 
     <div>
         <label for="username">Username</label>
         <div>
-            <input type="text" name="username" id="username">
+            <input type="text" id="username" th:field="*{username}" >
         </div>
+        <div th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
     </div>
-
     <div>
         <label for="password">Password</label>
         <div>
-            <input type="password" name="password" id="password">
+            <input type="password" id="password" th:field="*{password}">
         </div>
+        <div th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
     </div>
 
     <div>
         <label for="email">Correo</label>
         <div>
-            <input type="email" name="email" id="email">
+            <input type="email" id="email" th:field="*{email}" >
         </div>
+        <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
     </div>
 
     <div>
