--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -10,6 +10,22 @@
     <h3 th:text="${titulo}"></h3>
 
     <div>
+        <label for="username">Nombre</label>
+        <div>
+            <input type="text" id="nombre" th:field="*{nombre}" >
+        </div>
+        <div th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></div>
+    </div>
+
+    <div>
+        <label for="username">Apellido</label>
+        <div>
+            <input type="text" id="apellido" th:field="*{apellido}" >
+        </div>
+        <div th:if="${#fields.hasErrors('apellido')}" th:errors="*{apellido}"></div>
+    </div>
+
+    <div>
         <label for="username">Username</label>
         <div>
             <input type="text" id="username" th:field="*{username}" >
